# Codeplag-rs

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
coverage/: tarpaulin-report.html
docs/: ARCHITECTURE.md  DEPENDENCIES.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: mod.rs  types.rs
src/engine/: mod.rs
src/fetcher/: github.rs  mod.rs
src/fingerprint/: ast.rs  mod.rs  winnowing.rs
test_fixtures/original/: sort_c.c  sort_go.go  sort_java.java  sort_js.js  sort_python.py  sort_rust.rs  sort_ts.ts
test_fixtures/renamed/: sort_c.c  sort_go.go  sort_java.java  sort_js.js  sort_python.py  sort_rust.rs  sort_ts.ts
test_fixtures/restructured/: sort_c.c  sort_go.go  sort_java.java  sort_js.js  sort_python.py  sort_rust.rs  sort_ts.ts
test_fixtures/unrelated/: utils_c.c  utils_go.go  utils_java.java  utils_js.js  utils_python.py  utils_rust.rs  utils_ts.ts
testcases/: algorithm_same.rs  all_combined.rs  ast_equivalent.rs  completely_different.rs  copied_partial.rs  deadcode.rs  rename.rs  rename_comment.rs  rename_deadcode.rs  rename_reorder.rs  reorder.rs  reorder_split.rs  split_function.rs  style_rename.rs
tests/: cli_test.rs  integration_test.rs
