[package]
name = "codeplag"
version = "0.1.0"
edition = "2021"
description = "A GitHub code plagiarism analyzer written in Rust"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP client for GitHub API
reqwest = { version = "0.12", features = ["json", "stream"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Hashing
sha2 = "0.10"
# AST parsing (multi-language)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
# Logging
log = "0.4"
env_logger = "0.11"
# Error handling
thiserror = "2"
anyhow = "1"
# Glob pattern matching
glob = "0.3"
# Progress
indicatif = "0.17"

[[bin]]
name = "codeplag"
path = "src/main.rs"
